[package]
name = "ecstatic"
version = "0.0.1"
description = "Statically-typed ECS library"
license = "Apache-2.0"
authors = ["Ian Gowen <ian@gowen.cc>"]
edition = "2018"
repository = "https://github.com/igowen/dashing"
categories = ["game-development", "data-structures"]

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
